Started docs on logout and refresh
